Restructured html, css skeleton.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Snake Game</title>
-        <style>
-            canvas{
-                display: block;
-                margin: 0 auto;
-            }
-        </style>
-    </head>
-    <canvas id="snake" width="608" height="608"></canvas>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Snake Hussle</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
+</head>
+
+<body>
+    <canvas id="snake"></canvas>
     <script src="snake.js"></script>
+</body>
+
 </html>
