No Work was done today.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Snake Hussle</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Snake Game</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/main.css" />
 </head>
 
 <body>
-    <canvas id="snake"></canvas>
+    <canvas id="snake" height="608" width="608"> </canvas>
     <script src="snake.js"></script>
 </body>
 
