--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="heading">Snake Race 1.0</div>
+    <header id="heading">Snake Race 1.0</header>
     <nav id="menu">
         <ul>
             <li><a href="#"></a><input type="button" id="join" value="Join"></li>
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <div id="game-field">
-        <canvas id="snake" height="608" width="608">
+        <canvas id="snake" height="520" width="680">
             Your Browser does not support the canvas element
         </canvas>
     </div>
