--- a/public/index.html
+++ b/public/index.html
@@ -19,25 +19,31 @@
     </header>
     <div class="container-fluid">
         <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
+                    <div id="user-form">
+                            <div class="form-group">
+                                <label>Welcome, Player</label>
+                                <input type="text" class="form-control" id="player-name" placeholder="Enter Your Name">
+                                <button type="submit" id="login" class="btn btn-primary">Login</button>
+                            </div>
+                        </div>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+        <div class="row">
             <div class="col-sm-2">
                 <div id="menu">
                     <ul>
-                        <li><a href="#"></a><input type="button" id="join" class="btn btn-primary btn-lg" value="Join">
+                        <li><input type="button" id="join" class="btn btn-primary btn-lg" value="Join">
                         </li>
-                        <li><a href="#"><input type="button" id="start" class="btn btn-success btn-lg"
-                                    value="Start Game"></a>
+                        <li><input type="button" id="start" class="btn btn-success btn-lg"
+                                    value="Start Game">
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col-sm-8">
-                <div id="user-form">
-                    <div class="form-group">
-                        <label>Enter Name</label>
-                        <input type="text" class="form-control" id="player-name" placeholder="Enter Name">
-                        <button type="submit" class="btn btn-primary">Login</button>
-                    </div>
-                </div>
                 <div id="game-field">
                     <div id="welcome-div">
                         <h1>Hi, Welcome to the Snake Race. Click <span>Play Game</span> to start, Goodluck!</h1>
