some more changes, significant progress

--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,13 @@
         <div class="row">
             <div class="col-sm-2"></div>
             <div class="col-sm-8">
-                    <div id="user-form">
-                            <div class="form-group">
-                                <label>Welcome, Player</label>
-                                <input type="text" class="form-control" id="player-name" placeholder="Enter Your Name">
-                                <button type="submit" id="login" class="btn btn-primary">Login</button>
-                            </div>
-                        </div>
+                <div id="user-form">
+                    <div class="form-group">
+                        <label>Welcome, Player</label>
+                        <input type="text" class="form-control" id="player-name" placeholder="Enter Your Name">
+                        <button type="submit" id="login" class="btn btn-primary">Login</button>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-2"></div>
         </div>
@@ -37,8 +37,7 @@
                     <ul>
                         <li><input type="button" id="join" class="btn btn-primary btn-lg" value="Join">
                         </li>
-                        <li><input type="button" id="start" class="btn btn-success btn-lg"
-                                    value="Start Game">
+                        <li><input type="button" id="start" class="btn btn-success btn-lg" value="Start Game">
                         </li>
                     </ul>
                 </div>
