test: pass an array prop. of object via sockt. yes

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                     <div id="welcome-div">
                         <h1>Hi, Welcome to the Snake Race. Click <span>Play Game</span> to start, Goodluck!</h1>
                     </div>
-                    <canvas id="snake" height="400" width="400">
+                    <canvas id="snake-race" height="300" width="500">
                         Your Browser does not support the canvas element
                     </canvas>
                 </div>
