--- a/public/index.html
+++ b/public/index.html
@@ -1,64 +1,88 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Multiplayer Snake Race</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link type="text/css" rel="stylesheet" href="style.css" />
 
     <!-- <script src="http://code.jquery.com/jquery-latest.min.js"></script> -->
-</head>
+  </head>
 
-<body>
+  <body>
     <header id="heading">
-        <h4>Snake Race 1.0</h4>
+      <h4>Snake Race 1.0</h4>
     </header>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-8">
-                <div id="user-form">
-                    <div class="form-group">
-                        <label>Welcome, Player</label>
-                        <input type="text" class="form-control" id="player-name" placeholder="Enter Your Name">
-                        <button type="submit" id="login" class="btn btn-primary">Login</button>
-                    </div>
-                </div>
+      <div class="row">
+        <div class="col-3 col-s-3"></div>
+        <div class="col-6 col-s-9">
+          <div id="user-form">
+            <div class="form-group">
+              <label>Welcome, Player</label>
+              <input
+                type="text"
+                class="form-control"
+                id="player-name"
+                placeholder="Enter Your Name"
+              />
+              <button type="submit" id="login" class="btn btn-primary">
+                Login
+              </button>
             </div>
-            <div class="col-sm-2"></div>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-sm-2">
-                <div id="menu">
-                    <ul>
-                        <li><input type="button" id="join" class="btn btn-primary btn-lg" value="Join">
-                        </li>
-                        <li><input type="button" id="start" class="btn btn-success btn-lg" value="Start Game">
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-8">
-                <div id="game-field">
-                    <div id="welcome-div">
-                        <h1>Hi, Welcome to the Snake Race. Click <span>Play Game</span> to start, Goodluck!</h1>
-                    </div>
-                    <canvas id="snake-race" height="300" width="500">
-                        Your Browser does not support the canvas element
-                    </canvas>
-                </div>
-            </div>
-            <div class="col-sm-2"></div>
+        <div class="col-3 col-s-3"></div>
+      </div>
+      <div class="row">
+        <div class="col-3 col-s-12">
+          <div id="menu">
+            <ul>
+              <li>
+                <input
+                  type="button"
+                  id="join"
+                  class="btn btn-primary btn-lg"
+                  value="Join"
+                />
+              </li>
+              <li>
+                <input
+                  type="button"
+                  id="start"
+                  class="btn btn-success btn-lg"
+                  value="play"
+                />
+              </li>
+            </ul>
+          </div>
         </div>
+        <div class="col-6 col-s-9">
+          <div id="game-field">
+            <div id="welcome-div">
+              <h1>
+                Hi, Welcome to the Snake Race. Click <span>Play Game</span> to
+                start, Goodluck!
+              </h1>
+            </div>
+            <canvas id="snake-race" height="300" width="500">
+              Your Browser does not support the canvas element
+            </canvas>
+          </div>
+        </div>
+        <div class="col-3 col-s-12"></div>
+      </div>
     </div>
     <footer>Created by Icardi</footer>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/client.js"></script>
-</body>
-
+    <script src="client.js"></script>
+  </body>
 </html>
