--- a/public/index.html
+++ b/public/index.html
@@ -22,65 +22,69 @@
       <h4>Snake Race 1.0</h4>
     </header>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row" id="login-form">
         <div class="col-3 col-s-3"></div>
         <div class="col-6 col-s-9">
-          <div id="user-form">
+          <form id="user-form">
             <div class="form-group">
               <label>Welcome, Player</label>
-              <input
-                type="text"
-                class="form-control"
-                id="player-name"
-                placeholder="Enter Your Name"
-              />
+              <input type="text" class="form-control" id="playername"
+                placeholder="Enter Your Name" />
               <button type="submit" id="login" class="btn btn-primary">
                 Login
               </button>
             </div>
-          </div>
+          </form>
         </div>
         <div class="col-3 col-s-3"></div>
       </div>
-      <div class="row">
-        <div class="col-3 col-s-12">
-          <div id="menu">
-            <ul>
-              <li>
-                <input
-                  type="button"
-                  id="join"
-                  class="btn btn-primary btn-lg"
-                  value="Join"
-                />
-              </li>
-              <li>
-                <input
-                  type="button"
-                  id="start"
-                  class="btn btn-success btn-lg"
-                  value="play"
-                />
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-6 col-s-9">
-          <div id="game-field">
-            <div id="welcome-div">
-              <h1>
-                Hi, Welcome to the Snake Race. Click <span>Play Game</span> to
-                start, Goodluck!
-              </h1>
+      <div class="container-fluid">
+          <div class="row">
+            <div class="col-3 col-s-12">
+              <!-- Menu Area -->
+              <div id="menu">
+                <ul>
+                  <li>
+                    <input
+                      type="button"
+                      id="join"
+                      class="btn btn-primary btn-lg"
+                      value="Join"
+                    />
+                  </li>
+                  <li>
+                    <input
+                      type="button"
+                      id="start"
+                      class="btn btn-success btn-lg"
+                      value="play"
+                    />
+                  </li>
+                </ul>
+              </div>
+              <!-- Users Area -->
+              <div id="users-area" class="well">
+                <h3>Player List</h3>
+                <ul class="list-group" id="players-list"></ul>
+                <input id="logout" class="btn btn-danger btn-lg" type="button" value="Log Out">
+              </div>
             </div>
-            <canvas id="snake-race" height="300" width="500">
-              Your Browser does not support the canvas element
-            </canvas>
+            <div class="col-6 col-s-9">
+              <div id="game-field">
+                <div id="welcome-div">
+                  <h1>
+                    Hi, Welcome to the Snake Race. Click <span>Play Game</span> to
+                    start, Goodluck!
+                  </h1>
+                </div>
+                <canvas id="snake-race" height="300" width="500">
+                  Your Browser does not support the canvas element
+                </canvas>
+              </div>
+            </div>
+            <div class="col-3 col-s-12"></div>
           </div>
         </div>
-        <div class="col-3 col-s-12"></div>
-      </div>
-    </div>
     <footer>Created by Icardi</footer>
     <script src="/socket.io/socket.io.js"></script>
     <script src="client.js"></script>
