fixed challenge board div, player names display

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
                   </h1>
                 </div>
                 <div id ="versus">
-                  <h2><span id="p-one"></span> VERSUS <span id="p-two"></span></h2>
+                  <div><p class="left" id="p-one"></p> <p class="center">VS</p> <span class="right" id="p-two"></span></div>
                 </div>
                 <canvas id="snake-race" height="300" width="500">
                   Your Browser does not support the canvas element
