--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,8 @@
                   </h1>
                 </div>
                 <div id ="versus">
-                  <div><p class="left" id="p-one"></p> <p class="center">VS</p> <span class="right" id="p-two"></span></div>
+                  <div class="left" id="p-one"></div>
+                  <div class="right" id="p-two"></div>
                 </div>
                 <canvas id="snake-race" height="300" width="500">
                   Your Browser does not support the canvas element
@@ -84,7 +85,7 @@
     <footer>Created by Icardi</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>  
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>     
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="../socket.io/socket.io.js"></script>
     <!-- <script src="lib/socket.io-client/dist/socket.io.js"></script> -->
     <script src="client.js"></script>
     
