put boundaries on canvas and timer functions

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="container-fluid">
-          <div class="row">
+          <div class="row" id="game-div">
             <div class="col-3 col-s-6">
               <!-- Menu Area -->
               <div id="menu-area">
@@ -68,9 +68,10 @@
                     start, Goodluck!
                   </h1>
                 </div>
-                <div id ="versus">
-                  <div class="left" id="p-one"></div>
-                  <div class="right" id="p-two"></div>
+                <div class="container" id ="versus">
+                  <div id="p-one"></div>
+                  <div id="p-two"></div>
+                  <div id="timer"></div>
                 </div>
                 <canvas id="snake-race" height="300" width="500">
                   Your Browser does not support the canvas element
