added tooltip on switch button for instruction

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
             </div>
             <div class="col-2">
                 <button id="switch" class="btn btn-info btn-lg">
-                    Switch Forms
+                    Switch
+                    <span class="tooltiptext">Click to switch between login and sign up form</span>
                 </button>
             </div>
             <div class="col-5 col-s-12 ">
